(ws-buglink:8742[])
+
Versions affected: 1.10.0 to 1.10.1, 1.8.0 to 1.8.9
//+
//cve-idlink:2013-????[]


The following bugs have been fixed:

//* Wireshark will practice the jazz flute for hours on end when you're trying to sleep. ws-buglink:0000[]

* Lua ByteArray:append() causes wireshark crash. (ws-buglink:4461[])

* Lua script can not get "data-text-lines" protocol data. (ws-buglink:5200[])

* "Edit Interface Settings": "Capture Filter" combo box is not populated across Wireshark sessions. (ws-buglink:7278[])

* PER normally small non-negative whole number decoding is wrong when >= 64. (ws-buglink:8841[])

* Strange behavior of tree expand/collapse in packet details. (ws-buglink:8908[])

* Incorrect parsing of IPFIX *IpTotalLength elements. (ws-buglink:8918[])

* IO graph/advanced, max/min/summ error on frames with multiple Diameter messages. (ws-buglink:8980[])

* pod2man error on reordercap.pod. (ws-buglink:8982[])

* SGI Nsym disambiguation is unconditionally displayed when dissecting VHT. (ws-buglink:8989[])

* The Wireshark icon doesn't show up in OS X 10.5. (ws-buglink:8993[])

* Build fails if system Python is version 3+. (ws-buglink:8995[])

* SCSI dissector does not parse PERSISTENT RESERVE commands correctly. (ws-buglink:9012[])

* SDP messages throws an assert. (ws-buglink:9022[])

* Wireshark fails to decode single-line, multiple Contact: URIs in SIP responses. (ws-buglink:9031[])

* PN_MRP LinkUp Message is shown as LinkDown in info. (ws-buglink:9035[])

* Dissector for EtherCAT: ADS highlighting in the Packet Bytes Pane is incorrect. (ws-buglink:9036[])

* 802.11 HT Extended Capabilities B10 decode incorrect. (ws-buglink:9038[])

* Wrong dissection of MSTI Root Identifiers for all MSTIs. (ws-buglink:9088[])

* Weird malformed HTTP error. (ws-buglink:9101[])

* Warning for attempting to install 64-bit Wireshark on a 32-bit machine has an embedded "\n". (ws-buglink:9103[])

=== New and Updated Features

There are no new features in this release.
